[gd_scene load_steps=3 format=3 uid="uid://clvar3rgp82e6"]

[ext_resource type="Script" path="res://Game/SaveElement.gd" id="1_tll0l"]
[ext_resource type="Texture2D" uid="uid://c10lrki8cii23" path="res://Resources/1Main/GUI/empty_slot.png" id="2_y64un"]

[node name="SaveElement" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(450, 253)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tll0l")
default_color = Color(0.658824, 0.654902, 0.654902, 1)
pressed_color = Color(1, 0.756863, 0.760784, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_y64un")
expand_mode = 3

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
text = "Empty Slot
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="TextureRect" to="." method="_on_texture_rect_gui_input"]
[connection signal="mouse_entered" from="TextureRect" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect" to="." method="_on_texture_rect_mouse_exited"]
